Actualizo páginas, renombro archivos y creo chistes

--- a/public/page3.html
+++ b/public/page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tercera Página</title>
+    <title>Her Letter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="page3">
@@ -51,7 +51,7 @@
             <img id="fullImage" src="poem_palm.jpg" alt="Tamara">
         </div>
       
-        <p class="c">Gracias por leer esto, y de corazón te deseo lo mejor para este año.</p>
+        <p class="c">Gracias por leer esto, y de <i>corazón</i> te deseo lo mejor para este año.</p>
         
         <div id="containerboom">
           <p id="initialMessage" onclick="showInteractiveMessage()" class="mensajeadi">Mensaje adicional</p>
