--- a/public/page4.html
+++ b/public/page4.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cuarta pagina</title>
+    <title>For her</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="fondomp3">
     <div class="audio-container">
         <div class="otrotexto">
-            <p class="otraepoca">Te quería compartir una <i>sensación</i>,<br>Espero que te guste la canción.<br>
+            <p class="otraepoca">From the tide to <i>her island</i>,<br>Espero que te guste la canción.<br>
             </p>
         </div>
         <audio controls>
