Recreado el archivo server.js con el nuevo código

--- a/public/page5.html
+++ b/public/page5.html
@@ -54,8 +54,8 @@
                 La chica lo mira. Respira llenando el pecho de aire como si contara hasta diez en su mente, y con un tono suave, casi maternal, responde: <br>
                 —Mirá, la cinta... no pega mucho. Pero, si querés, te puedo mostrar algo que pega fuerte de verdad. <br><br>
                 Con un dedo señala justo debajo de un estante, donde hay una engrapadora. El zombie, emocionado por la oferta, se agacha para agarrarla. <br><br>
-                En ese instante, escucha el clic metálico de un revolver amartillándose detrás de él. <br> La señorita, inclinándose hacia su oído, le susurra en voz baja: <br>
-                —Esto pega perfecto. <br><br>
+                En ese instante, siente el clic metálico de un revolver amartillándose detrás de él. <br> La señorita, inclinándose hacia su oído, le susurra en voz baja: <br>
+                —Esto pega perfecto, mirá <br><br>
                 El zombie no volvió a hacer preguntas estúpidas. Es que... no volvió en absoluto. <br>
             </p><br>
         </div>
@@ -66,7 +66,7 @@
           <p class="c">
             <b>Este tiene más historia. Post apocaliptico:</b><br>
             <br>
-            El vecindario Saranpank estaba siendo atacado por zombies que conocían a los vecinos como si fueran el menú de un restaurante. Sin embargo, jamás se acercaban a la casa de una chica que llevaba encerrada desde el inicio del apocalipsis. Una tarde, uno de los zombies se atrevió a dar un paso en su vereda, pero otro lo detuvo: <br>
+            El vecindario de Saranpank estaba siendo atacado por zombies que conocían a los vecinos como si fueran el menú de un restaurante. Sin embargo, jamás se acercaban a la casa de una chica que llevaba encerrada desde el inicio del apocalipsis. Una tarde, uno de los zombies se atrevió a dar un paso en su vereda, pero otro lo detuvo: <br>
             —No te gastes, no va a salir. Es como el WiFi, siempre está cerca pero nunca disponible. <br><br>
             
             Esa misma tarde, una señora salió de repente de su casa y los zombies, emocionados como si estuvieran frente a un buffet, comenzaron a acorralarla. Desde los techos, los vecinos gritaban desesperados, pero ninguno se atrevía a bajar. La chica, curiosa, abrió la ventana de su cuarto y vio el desastre. Los vecinos que estaban un poco más alejados de la situación, la vieron y le gritaron: <br>
