Preparar para publicación en Vercel

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Only her</title>
+    <title>one</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="index">
@@ -11,11 +11,13 @@
         <h1>Que tal?</h1>
         <p>Hay un <b><i>mensaje</i></b> para un destinatario. Si desea verlo, debe ingresar la clave de acceso</p>
         <form id="access-form">
-            <p id="error-message" style="display:none; color:rgb(225, 60, 71);"></p>
+            <p id="error-message" style="display:none; color:rgb(236, 224, 225);"></p>
             <input type="password" id="password" placeholder="_ _ _ _ _ _  . . . . ." required>
             <button type="submit">Entrar</button>
         </form>
     </div>
+    <!-- EmailJS -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
