--- a/public/page5.html
+++ b/public/page5.html
@@ -8,13 +8,12 @@
 </head>
 <body class="page3">
     <div class="letter">
-        <p class="c intro">
+        <p class="intro">
           Antes que nada, esto es para sacarte una sonrisa.<br>
-
           Acá te van, pero no te rías tan fuerte, eh?<br><br>
         </p><br>
 
-        <div class="joke">
+        <div class="jokeu">
             <p class="c">
                 <strong>El primero:</strong><br>
                 <br>
@@ -27,7 +26,7 @@
             </p> <br>
         </div>
 
-        <div class="joke">
+        <div class="joked">
             <p class="c">
                 <strong>A ver este:</strong><br>
                 <br>
@@ -44,7 +43,7 @@
             </p>
         </div>
 
-        <div class="joke">
+        <div class="joket">
             <p class="c">
                 <strong>Un poco de humor oscuro:</strong><br>
                 <br>
@@ -61,8 +60,7 @@
         </div>
         <br>
 
-
-        <div class="apocaliptico">
+        <div class="jokec">
           <p class="c">
             <b>Este tiene más historia. Post apocaliptico:</b><br>
             <br>
@@ -86,13 +84,14 @@
         <br>
 
       <div class="agradecimiento">
-        <p class="c">
+        <p class="textoagrad">
           Gracias por leer hasta acá. <br> Espero que al menos te hayas reído con uno... porque, sinceramente, alguien logró que yo me riera más de lo esperado con un comentario que jamás vi venir. <br> 
           De mi parte, cada vez que veo un capítulo de la serie inacabable, The Walking Dead, es difícil que no piense en la engrapadora guardada en el cajón de mi abuela. Posta, ¿quién necesita bates o espadas cuando tienen "el arma mortal" al lado de la compu? <br><br>
 
-          Definitivamente, esa noche del Día del Amigo redefinió mi concepto de humor y me desarmó más rápido que cualquier grapita, porque me di cuenta de que esa mirada tan seria podría ser peligrosamente encantadora... casi digo "engrapadora" jajajsjs.
+          Definitivamente, esa noche del Día del Amigo redefinió mi concepto de humor y me desarmó más rápido que cualquier grapita, porque me di cuenta de que esa mirada tan seria podría ser peligrosamente encantadora... casi digo "engrapadora" jajajs.
           <br><br>
-          (Ah, y por cierto, en el juego que voy a programar, el arma que se desbloqueará en el último nivel... nadie se la va a esperar 😏. Gracias por la idea, tranqui que te pongo los créditos.)
+          Ah, y por cierto, en el juego que voy a programar, el arma que se desbloqueará en el último nivel... nadie se la va a esperar
+          <a href="https://go.pristo.io/p/new/w9M0IDKn9UeIfBwCRGLrCw/kgYsxld8P02aDwjdNHhkgQ" class="encuesta">😏</a>. Gracias por la idea, tranqui que te pongo los créditos.
         </p>
       </div>
 
