sacar comentario email

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <button type="submit">Entrar</button>
         </form>
     </div>
-    <!-- EmailJS -->
+    <!-- daskdskdoOOKHa -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
