--- a/public/page3.html
+++ b/public/page3.html
@@ -31,7 +31,7 @@
     
         <p class="c">Estuve reflexionando desde aquel octubre y no quiero decir que ahora soy completamente madura o diferente, como un loco que dice que ya no es loco, pero veo cada cosa que hice y cómo hago ciertas cosas que hago, y no me gustan en absoluto. No busco que trates de entenderme ni justificar ninguna de cada acción que tomé, que las sé todas.</p>
     
-        <p class="c">Me siento totalmente arrepentida de mis acciones porque veo lo que te hicieron sentir hasta ahora. Sé que mi comportamiento invadió más que tu privacidad y te generó ansiedad o constante intranquilidad, cómo no lo vas a sentir constantemente si encima vivo al frente de tu casa. Cómo no vas a sentirte acechada si una random que solo conoces de vista te sometió a sus intenciones invisibles y además de eso luego lees que en su carta dice que “siempre te espera”. <br>
+        <p class="c">Sé que mi comportamiento invadió más que tu privacidad y te generó ansiedad o constante intranquilidad, cómo no lo vas a sentir constantemente si encima vivo al frente de tu casa. Cómo no vas a sentirte acechada si una random que solo conoces de vista te sometió a sus intenciones invisibles y además de eso luego lees que en su carta dice que “siempre te espera”. <br>
         Esa frase estoy segura que te escribí en aquella carta y quiero decirte que no es cierto que siempre te espero , no lo hago, si lo hice al intentar conversar con vos esas veces. Actuando de forma repulsiva en mis iniciativas. 
         En la misma carta, también recuerdo que te dije o que te dejé con la creencia de que ya no te iba a molestar de ninguna forma, y no lo hice. No merecías sentir esas cosas. Mis disculpas son por cada segundo que las revivís.
         </p>
