ultima actualizacion de la noche

--- a/public/page3.html
+++ b/public/page3.html
@@ -58,7 +58,7 @@
         <div id="containerboom">
           <p id="initialMessage" onclick="showInteractiveMessage()" class="mensajeadi">Mensaje adicional</p>
           <div id="interactiveArea" style="display: none;">
-              <p class="cc">No espero una respuesta o iniciar una conversación pero podés ver algunos detalles en el sitio, sí así lo deseas.</p>
+              <p class="cc">No espero que respondas a la carta pero podés ver algunos detalles en el sitio, sí así lo deseas.</p>
           </div>
         </div>
   
