actualizacion de la carta

--- a/public/page3.html
+++ b/public/page3.html
@@ -16,7 +16,7 @@
           Yo dejé el link en tu vereda para que puedas acceder a esta carta y si estás leyendo esto es porque decidiste verla. Gracias por tomarte el tiempo de hacerlo.
         </p>
         <p class="c">
-          La razón de esto es porque tengo que disculparme con vos, sé que esta forma no es menos invasiva. Lamento que solo se me haya ocurrido esta manera para expresarlo sin darte más molestias.
+          Sé que pasó un tiempo pero la razon de esto es porque tengo que disculparme con vos, sé que esta forma no es menos invasiva. Lamento que solo se me haya ocurrido esta manera para expresarlo sin darte más molestias.
         </p>
         <p class="c">
           Sinceramente quiero decirte perdón por lo que pasó aquella vez, por lo que te hice y por lo que te hago sentir todavía. Sé que todas las formas en la que actué estuvieron más que mal y te dejaron profundamente incómoda. Lamento mucho todo lo que te hice pasar. 
