ajuste de chistes

--- a/public/page5.html
+++ b/public/page5.html
@@ -52,10 +52,10 @@
                 —¿Esta cinta sirve para pegar papel? <br><br>
                 La chica lo mira. Respira llenando el pecho de aire como si contara hasta diez en su mente, y con un tono suave, casi maternal, responde: <br>
                 —Mirá, la cinta... no pega mucho. Pero, si querés, te puedo mostrar algo que pega fuerte de verdad. <br><br>
-                Con un dedo señala justo debajo de un estante, donde hay una engrapadora. El zombie, emocionado por la oferta, se agacha para agarrarla. <br><br>
-                En ese instante, siente el clic metálico de un revolver amartillándose detrás de él. <br> La señorita, inclinándose hacia su oído, le susurra en voz baja: <br>
+                Con un dedo señala justo debajo de un estante, donde hay una engrapadora. El zombie se emociona por la oferta y, en el momento que se inclina para agarrarla, escucha un clic metálico justo detrás de su cabeza. <br><br>
+                La señorita, con una sonrisa más emocionante, se acerca a su oido y le susurra: <br>
                 —Esto pega perfecto, mirá <br><br>
-                El zombie no volvió a hacer preguntas estúpidas. Es que... no volvió en absoluto. <br>
+                El zombie no volvió a hacer preguntas estúpidas. Es que.. el zombie no.. <br>
             </p><br>
         </div>
         <br>
