--- a/public/page5.html
+++ b/public/page5.html
@@ -90,12 +90,11 @@
 
           Definitivamente, esa noche del Día del Amigo redefinió mi concepto de humor y me desarmó más rápido que cualquier grapita, porque me di cuenta de que esa mirada tan seria podría ser peligrosamente encantadora... casi digo "engrapadora" jajajs.
           <br><br>
-          Ah, y por cierto, en el juego que voy a programar, el arma que se desbloqueará en el último nivel... nadie se la va a esperar
+          Ah, y por cierto, en el <i>juego</i> que voy a programar, el arma que se desbloqueará en el último nivel... nadie se la va a esperar
           <a href="https://go.pristo.io/p/new/w9M0IDKn9UeIfBwCRGLrCw/kgYsxld8P02aDwjdNHhkgQ" class="encuesta">😏</a>. Gracias por la idea, tranqui que te pongo los créditos.
         </p>
       </div>
 
     </div>
-
 </body>
 </html>
