ajuste de encuesta

--- a/public/page6.html
+++ b/public/page6.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('estrellado.png') no-repeat center center fixed;
+            background: url('islalejana.png') no-repeat center center fixed;
             background-size: cover;
             overflow: hidden;
             display: flex;
@@ -72,7 +72,7 @@
         const boat = document.getElementById('boat');
         const sky = document.querySelector('.sky');
 
-        let sunSpeed = 1; // Velocidad inicial del sol
+        let sunSpeed = 2; // Velocidad inicial del sol
         let moonSpeed = 2; // Velocidad inicial de la luna
         let boatSpeedX = 0; // Velocidad inicial del barco en X
         let boatSpeedY = 0; // Velocidad inicial del barco en Y
