ajuste de carta

--- a/public/page3.html
+++ b/public/page3.html
@@ -45,7 +45,7 @@
           <i id="tamara">Tamara</i>. La intención de mi escritura es pedirte el más abarcativo y sincero perdón que te mereces.
           Te mereces tranquilidad, te mereces sentirte segura en el mundo externo y en tu mundo interno. 
           Te mereces cosas lindas, cosas buenas y lo mejor de cada una. <br>
-          No puedo devolverte cada minuto donde te sentiste mal, pero quiero asegurarte que no voy a cruzar ese límite otra vez, porque quiero que te sientas alegre y sientas las mejores sensaciones, que te acompañen todas.
+          No puedo devolverte cada minuto donde te sentiste mal, pero quiero asegurarte que no voy a cruzar ese límite otra vez, porque quiero que te sientas alegre y sientas las mejores sensaciones, que te acompañen todas ellas.
           Espero, en lo posible, poder remediar esas emociones y este sitio es solo una pequeña muestra de que quiero compensarte de alguna forma.
         </p>
         <div id="overlay" style="display: none;">
